add translator screen

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   get: ^4.6.6
   flutter_screenutil: ^5.9.3
   bottom_navy_bar: ^6.1.0
+  translator_plus: ^1.0.1
 
 dev_dependencies:
   flutter_test:
