--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,9 +41,10 @@ dependencies:
   translator_plus: ^1.0.1
   flutter_tts: ^4.0.2
   fluttertoast: ^8.2.8
-  share_plus: ^10.0.2
+  share_plus: ^10.1.0
   speech_to_text: ^7.0.0
   permission_handler: ^11.3.1
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
